fix(enhancedTable): details and zoom button off center (#73)

--- a/enhancedTable/main.scss
+++ b/enhancedTable/main.scss
@@ -29,6 +29,10 @@ md-datepicker > div {
     right: 0px;
 }
 
+.enhanced-table-details, .enhanced-table-zoom {
+    margin: 0 !important;
+}
+
 .reorder-button {
     margin: 0 !important;
     width: 18px !important;
